2010-05-27  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkrescue.in: Initialise override_dir rather than
	assuming that it's unset or empty in the environment.

2010-05-26  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* kern/emu/hostdisk.c (find_partition_start) [__NetBSD__]: Renamed
	variable index into p_index to suppress a warning with -Wshadow.

2010-05-25  BVK Chaitanya  <bvk.groups@gmail.com>

	* INSTALL: Added flex >= 2.5.35 requirement.

2010-05-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* commands/usbtest.c (grub_usb_get_string): Properly support UTF-16.

2010-05-23  Vladimir Serbinenko  <phcoder@gmail.com>

	cmostest support.

	* commands/i386/cmostest.c: New file.
	* conf/i386-coreboot.rmk (pkglib_MODULES): Add cmostest.mod.
	(cmostest_mod_SOURCES): New variable.
	(cmostest_mod_CFLAGS): Likewise.
	(cmostest_mod_LDFLAGS): Likewise.
	* conf/i386-pc.rmk: Likewise.
	* docs/grub.texi (Vendor power-on keys): New section.
	* util/grub-mkconfig.in: export GRUB_DEFAULT_BUTTON,
	GRUB_HIDDEN_TIMEOUT_BUTTON, GRUB_TIMEOUT_BUTTON
	and GRUB_BUTTON_CMOS_ADDRESS.
	* util/grub.d/00_header.in: Handle powering-on by separate button.

2010-05-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* gfxmenu/gui_list.c (draw_menu): Don't add scrollbar width to padding.
	Removed drawing_scrollbar argument. All users updated
	Fixes #29792.
	Reported by Jo Shields

2010-05-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* gfxmenu/view.c (grub_gfxmenu_draw_terminal_box): Apply only to current
	buffer since gfxterm handles double repaint.

2010-05-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* gfxmenu/gfxmenu.c (grub_gfxmenu_try): Change viewport on both buffers.
	* term/gfxterm.c (real_scroll): Likewise.

2010-05-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* kern/i386/pc/mmap.c (grub_machine_mmap_iterate): Zero-fill entry
	before calling BIOS.

2010-05-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/i18n.h: Always enable grub_gettext.
