@@ -1,3 +1,9 @@
+2010-05-27  Robert Millan  <rmh@gnu.org>
+
+	* util/grub-mkconfig_lib.in (prepare_grub_to_access_device): Insert
+	partmap module to handle cross-partmap setups.
+	Reported by Orestes Mas.  Gràcies!
+
 2010-05-27  Colin Watson  <cjwatson@ubuntu.com>
 
 	* util/grub-mkrescue.in: Initialise override_dir rather than
